@@ -266,9 +266,8 @@ if (getRequestVar('gRedir') == 1) {
         echo "\n<center><div style=\"width:60%; border-style:outset; border-width:5px; border-color:red; padding: 5px\">";
         echo "\n<p class=\"head\"><u>". _("Attention!") ."</u></p>";
 
-	echo sprintf(_('The album or photo that you were attempting to view either does not exist, or requires user privileges that
-you do not posess. %s'), ($gallery->user->isLoggedIn() && !$GALLERY_EMBEDDED_INSIDE ? '' : sprintf(_("%s and try again."),
-popup_link(_("Log in"), "login.php", false, true, 500, 500))));
+	echo sprintf(_('The album or photo that you were attempting to view either does not exist, or requires user privileges that you do not posess. %s'), ($gallery->user->isLoggedIn() && !$GALLERY_EMBEDDED_INSIDE ? '' : sprintf(_("%s and try again."),
+		popup_link(_("Log in"), "login.php", false, true, 500, 500))));
         echo "\n</div></center>\n";
 }
 ?>
@@ -423,7 +422,7 @@ if($gallery->app->comments_enabled == 'yes') {
   </span>
   </td>
 <?php if (!strcmp($gallery->app->showAlbumTree, "yes")) { ?>
-  <td align=left valign=top class="albumdesc">
+  <td align="left" valign="top" class="albumdesc">
    <?php echo printChildren($albumName); ?>
   </td>
 <?php } ?>
