@@ -1,3 +1,8 @@
+2004-12-02  Jens A. Tkotz <jens@peino.de>  1.5-cvs-b297
+
+	* Change: Enhanced albumtree. Now the depth can be given.
+	  This covers RFE #964594 and #1027307.
+
 2004-12-02  Christian Mohn <h0bbel@p0ggel.org>  1.5-cvs-b296
 
         * Fix: Typos in admin-page.php
